Simplified the existing source providers to use URI authority and paths instead of the whole scheme-specific part.
Added unit tests for the script source providers.